{
  "version": 4,
  "terraform_version": "1.14.3",
  "serial": 159,
  "lineage": "6504d88d-2134-0b20-942b-89f97e69ecdd",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-05d2e6cad91107515",
            "arn": "arn:aws:ec2:us-east-2:343218189535:elastic-ip/eipalloc-05d2e6cad91107515",
            "domain": "vpc",
            "id": "eipalloc-05d2e6cad91107515",
            "network_border_group": "us-east-2",
            "public_dns": "ec2-3-23-41-237.us-east-2.compute.amazonaws.com",
            "public_ip": "3.23.41.237",
            "public_ipv4_pool": "amazon",
            "region": "us-east-2",
            "tags": {
              "Name": "rvk-school-mgmt-nat-eip"
            },
            "tags_all": {
              "Name": "rvk-school-mgmt-nat-eip"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:343218189535:internet-gateway/igw-03af8f9bde44863d8",
            "id": "igw-03af8f9bde44863d8",
            "owner_id": "343218189535",
            "region": "us-east-2",
            "tags": {
              "Name": "rvk-school-mgmt-igw"
            },
            "tags_all": {
              "Name": "rvk-school-mgmt-igw"
            },
            "vpc_id": "vpc-058db118490e9ccf3"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-05d2e6cad91107515",
            "association_id": "eipassoc-02f629096939aa260",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-0654a8a48cc28ffc8",
            "network_interface_id": "eni-0b2ce54a6458d43ea",
            "private_ip": "10.0.1.158",
            "public_ip": "3.23.41.237",
            "region": "us-east-2",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-02e90a3932935631f",
            "tags": {
              "Name": "rvk-school-mgmt-nat"
            },
            "tags_all": {
              "Name": "rvk-school-mgmt-nat"
            },
            "vpc_id": "vpc-058db118490e9ccf3"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.gw",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:343218189535:route-table/rtb-0b2663bf9599187a8",
            "id": "rtb-0b2663bf9599187a8",
            "owner_id": "343218189535",
            "propagating_vgws": [],
            "region": "us-east-2",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0654a8a48cc28ffc8",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "rvk-school-mgmt-private-rt"
            },
            "tags_all": {
              "Name": "rvk-school-mgmt-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-058db118490e9ccf3"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "343218189535",
            "id": "rtb-0b2663bf9599187a8",
            "region": "us-east-2"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.gw",
            "aws_nat_gateway.nat",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:343218189535:route-table/rtb-0b1150b452bdd7869",
            "id": "rtb-0b1150b452bdd7869",
            "owner_id": "343218189535",
            "propagating_vgws": [],
            "region": "us-east-2",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-03af8f9bde44863d8",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "rvk-school-mgmt-public-rt"
            },
            "tags_all": {
              "Name": "rvk-school-mgmt-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-058db118490e9ccf3"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "343218189535",
            "id": "rtb-0b1150b452bdd7869",
            "region": "us-east-2"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "ecs_private_1_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b516f1b389f67f45",
            "region": "us-east-2",
            "route_table_id": "rtb-0b2663bf9599187a8",
            "subnet_id": "subnet-00ffb115d49810f28"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.gw",
            "aws_nat_gateway.nat",
            "aws_route_table.private_rt",
            "aws_subnet.ecs_private_1",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "ecs_private_2_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0427a2b02011fdf65",
            "region": "us-east-2",
            "route_table_id": "rtb-0b2663bf9599187a8",
            "subnet_id": "subnet-0df0f8921b4c847f7"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.gw",
            "aws_nat_gateway.nat",
            "aws_route_table.private_rt",
            "aws_subnet.ecs_private_2",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "lambda_private_1_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0002eb84cc5074c51",
            "region": "us-east-2",
            "route_table_id": "rtb-0b2663bf9599187a8",
            "subnet_id": "subnet-068dfc28f8c005d8f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.gw",
            "aws_nat_gateway.nat",
            "aws_route_table.private_rt",
            "aws_subnet.lambda_private_1",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "lambda_private_2_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f822e5715d65f9df",
            "region": "us-east-2",
            "route_table_id": "rtb-0b2663bf9599187a8",
            "subnet_id": "subnet-07ce170c570652035"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.gw",
            "aws_nat_gateway.nat",
            "aws_route_table.private_rt",
            "aws_subnet.lambda_private_2",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ed275759ebb5436e",
            "region": "us-east-2",
            "route_table_id": "rtb-0b1150b452bdd7869",
            "subnet_id": "subnet-02e90a3932935631f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.public_rt",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "efs_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:343218189535:security-group/sg-049fe78490840d3a5",
            "description": "Security Group for EFS - Storage Tier",
            "egress": [],
            "id": "sg-049fe78490840d3a5",
            "ingress": [],
            "name": "mongo-efs-sg",
            "name_prefix": "",
            "owner_id": "343218189535",
            "region": "us-east-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Description": "EFS Security Group for MongoDB Persistence",
              "Name": "mongo-efs-sg",
              "Tier": "Storage"
            },
            "tags_all": {
              "Description": "EFS Security Group for MongoDB Persistence",
              "Name": "mongo-efs-sg",
              "Tier": "Storage"
            },
            "timeouts": null,
            "vpc_id": "vpc-058db118490e9ccf3"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "343218189535",
            "id": "sg-049fe78490840d3a5",
            "region": "us-east-2"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lambda_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:343218189535:security-group/sg-02d2397f57a5069c2",
            "description": "Security Group for Lambda API - Application Tier",
            "egress": [],
            "id": "sg-02d2397f57a5069c2",
            "ingress": [],
            "name": "RVK-mongo-db-sg",
            "name_prefix": "",
            "owner_id": "343218189535",
            "region": "us-east-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Description": "Lambda API Security Group",
              "Name": "RVK-mongo-db-sg",
              "Tier": "Application"
            },
            "tags_all": {
              "Description": "Lambda API Security Group",
              "Name": "RVK-mongo-db-sg",
              "Tier": "Application"
            },
            "timeouts": null,
            "vpc_id": "vpc-058db118490e9ccf3"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "343218189535",
            "id": "sg-02d2397f57a5069c2",
            "region": "us-east-2"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "mongodb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:343218189535:security-group/sg-0e45536b628750ce6",
            "description": "Security Group for MongoDB ECS Task - Data Tier",
            "egress": [],
            "id": "sg-0e45536b628750ce6",
            "ingress": [],
            "name": "RVK-ecs-mongo-sg",
            "name_prefix": "",
            "owner_id": "343218189535",
            "region": "us-east-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Description": "MongoDB ECS Security Group",
              "Name": "RVK-ecs-mongo-sg",
              "Tier": "Data"
            },
            "tags_all": {
              "Description": "MongoDB ECS Security Group",
              "Name": "RVK-ecs-mongo-sg",
              "Tier": "Data"
            },
            "timeouts": null,
            "vpc_id": "vpc-058db118490e9ccf3"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "343218189535",
            "id": "sg-0e45536b628750ce6",
            "region": "us-east-2"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "efs_from_mongodb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow MongoDB ECS to mount EFS on port 2049 (NFS)",
            "from_port": 2049,
            "id": "sgrule-623789874",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "us-east-2",
            "security_group_id": "sg-049fe78490840d3a5",
            "security_group_rule_id": "sgr-0adc38892bc3f009d",
            "self": false,
            "source_security_group_id": "sg-0e45536b628750ce6",
            "timeouts": null,
            "to_port": 2049,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.efs_sg",
            "aws_security_group.mongodb_sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "lambda_to_internet_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow Lambda HTTP access for package downloads",
            "from_port": 80,
            "id": "sgrule-1704361828",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "us-east-2",
            "security_group_id": "sg-02d2397f57a5069c2",
            "security_group_rule_id": "sgr-022f8eb2bc1098958",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.lambda_sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "lambda_to_internet_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow Lambda HTTPS access for AWS APIs and external services",
            "from_port": 443,
            "id": "sgrule-944582821",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "us-east-2",
            "security_group_id": "sg-02d2397f57a5069c2",
            "security_group_rule_id": "sgr-0e6fac1c7e9c8819d",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 443,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.lambda_sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "lambda_to_mongodb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow Lambda to connect to MongoDB on port 27017",
            "from_port": 27017,
            "id": "sgrule-3953507736",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "us-east-2",
            "security_group_id": "sg-02d2397f57a5069c2",
            "security_group_rule_id": "sgr-0b7d20453cf9ef065",
            "self": false,
            "source_security_group_id": "sg-0e45536b628750ce6",
            "timeouts": null,
            "to_port": 27017,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.lambda_sg",
            "aws_security_group.mongodb_sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "mongodb_from_lambda",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow Lambda to access MongoDB on port 27017",
            "from_port": 27017,
            "id": "sgrule-2253934033",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "us-east-2",
            "security_group_id": "sg-0e45536b628750ce6",
            "security_group_rule_id": "sgr-0daf8c3ecccfcc0c4",
            "self": false,
            "source_security_group_id": "sg-02d2397f57a5069c2",
            "timeouts": null,
            "to_port": 27017,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.lambda_sg",
            "aws_security_group.mongodb_sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "mongodb_to_dns",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow DNS resolution for MongoDB ECS",
            "from_port": 53,
            "id": "sgrule-1400109353",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "udp",
            "region": "us-east-2",
            "security_group_id": "sg-0e45536b628750ce6",
            "security_group_rule_id": "sgr-0b391653fa8968ee6",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.mongodb_sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "mongodb_to_efs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow MongoDB to mount EFS volume on port 2049 (NFS)",
            "from_port": 2049,
            "id": "sgrule-2012762014",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "us-east-2",
            "security_group_id": "sg-0e45536b628750ce6",
            "security_group_rule_id": "sgr-01e0b13c6a0415708",
            "self": false,
            "source_security_group_id": "sg-049fe78490840d3a5",
            "timeouts": null,
            "to_port": 2049,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.efs_sg",
            "aws_security_group.mongodb_sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "mongodb_to_internet_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow HTTP for Docker Hub image pulls",
            "from_port": 80,
            "id": "sgrule-1581148585",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "us-east-2",
            "security_group_id": "sg-0e45536b628750ce6",
            "security_group_rule_id": "sgr-0448142ca1470b314",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.mongodb_sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "mongodb_to_internet_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow HTTPS for CloudWatch Logs, ECR/Docker Hub, and AWS API calls",
            "from_port": 443,
            "id": "sgrule-2999785311",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "us-east-2",
            "security_group_id": "sg-0e45536b628750ce6",
            "security_group_rule_id": "sgr-024915ef907e150a5",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 443,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.mongodb_sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "ecs_private_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:343218189535:subnet/subnet-00ffb115d49810f28",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00ffb115d49810f28",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "343218189535",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-2",
            "tags": {
              "Name": "rvk-school-mgmt-ecs-private-subnet-1",
              "Tier": "Data",
              "Type": "Private"
            },
            "tags_all": {
              "Name": "rvk-school-mgmt-ecs-private-subnet-1",
              "Tier": "Data",
              "Type": "Private"
            },
            "vpc_id": "vpc-058db118490e9ccf3"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "343218189535",
            "id": "subnet-00ffb115d49810f28",
            "region": "us-east-2"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "ecs_private_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:343218189535:subnet/subnet-0df0f8921b4c847f7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0df0f8921b4c847f7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "343218189535",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-2",
            "tags": {
              "Name": "rvk-school-mgmt-ecs-private-subnet-2",
              "Tier": "Data",
              "Type": "Private"
            },
            "tags_all": {
              "Name": "rvk-school-mgmt-ecs-private-subnet-2",
              "Tier": "Data",
              "Type": "Private"
            },
            "vpc_id": "vpc-058db118490e9ccf3"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "343218189535",
            "id": "subnet-0df0f8921b4c847f7",
            "region": "us-east-2"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "lambda_private_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:343218189535:subnet/subnet-068dfc28f8c005d8f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-068dfc28f8c005d8f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "343218189535",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-2",
            "tags": {
              "Name": "rvk-school-mgmt-lambda-private-subnet-1",
              "Tier": "Application",
              "Type": "Private"
            },
            "tags_all": {
              "Name": "rvk-school-mgmt-lambda-private-subnet-1",
              "Tier": "Application",
              "Type": "Private"
            },
            "vpc_id": "vpc-058db118490e9ccf3"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "343218189535",
            "id": "subnet-068dfc28f8c005d8f",
            "region": "us-east-2"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "lambda_private_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:343218189535:subnet/subnet-07ce170c570652035",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07ce170c570652035",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "343218189535",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-2",
            "tags": {
              "Name": "rvk-school-mgmt-lambda-private-subnet-2",
              "Tier": "Application",
              "Type": "Private"
            },
            "tags_all": {
              "Name": "rvk-school-mgmt-lambda-private-subnet-2",
              "Tier": "Application",
              "Type": "Private"
            },
            "vpc_id": "vpc-058db118490e9ccf3"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "343218189535",
            "id": "subnet-07ce170c570652035",
            "region": "us-east-2"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:343218189535:subnet/subnet-02e90a3932935631f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02e90a3932935631f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "343218189535",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-2",
            "tags": {
              "Name": "rvk-school-mgmt-public-subnet",
              "Type": "Public"
            },
            "tags_all": {
              "Name": "rvk-school-mgmt-public-subnet",
              "Type": "Public"
            },
            "vpc_id": "vpc-058db118490e9ccf3"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "343218189535",
            "id": "subnet-02e90a3932935631f",
            "region": "us-east-2"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:343218189535:vpc/vpc-058db118490e9ccf3",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-03f26ea0608de779a",
            "default_route_table_id": "rtb-03c3e6d76546f22fc",
            "default_security_group_id": "sg-0c3f9887864173040",
            "dhcp_options_id": "dopt-07587c2fd3519afce",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-058db118490e9ccf3",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-03c3e6d76546f22fc",
            "owner_id": "343218189535",
            "region": "us-east-2",
            "tags": {
              "Name": "rvk-school-mgmt-vpc"
            },
            "tags_all": {
              "Name": "rvk-school-mgmt-vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "343218189535",
            "id": "vpc-058db118490e9ccf3",
            "region": "us-east-2"
          }
        }
      ]
    }
  ]
}